bux fixed - toggle checkboxes not showing up

--- a/style/addTask.css
+++ b/style/addTask.css
@@ -430,7 +430,7 @@ header {
 }
 
 #checkBoxes {
-  visibility: hidden;
+  display: none;
   z-index: 99;
 }
 
